# schema-205

./: .clang-format  .gitignore  LICENSE.txt  Pipfile  README.md  dodo.py  pyproject.toml  setup.cfg  setup.py
cpp/: config.yaml
docs/: ASHRAE205.md.j2  RS0001.md.j2  RS0002.md.j2  RS0003.md.j2  RS0004.md.j2  RS0005.md.j2  RS0006.md.j2  RS0007.md.j2
docs-229/: ASHRAE229.schema.json  ASHRAE229.schema.md
meta-schema/: meta.schema.json
schema/: ASHRAE205.schema.json  ASHRAE205.schema.yaml  RS0001.schema.json  RS0001.schema.yaml  RS0002.schema.json  RS0002.schema.yaml  RS0003.schema.json  RS0003.schema.yaml  RS0004.schema.json  RS0004.schema.yaml  RS0005.schema.json  RS0005.schema.yaml  RS0006.schema.json  RS0006.schema.yaml  RS0007.schema.yaml
schema-source/: ASHRAE205.schema.yaml  ASHRAE229.schema.yaml  RS0001.schema.yaml  RS0002.schema.yaml  RS0003.schema.yaml  RS0004.schema.yaml  RS0005.schema.yaml  RS0006.schema.yaml  RS0007.schema.yaml  RS0008.schema.yaml  RS00xx.schema.yaml  RSxxSub.schema.yaml
schema205/: __init__.py  cpp_entries.py  cpp_translate.py  file_io.py  gen-refrigerant-enums.py  generate_factory_templates.py  header_entries.py  json_translate.py  make_grid_table.py  markdown.py  refrigerants.csv  regex.py  render_jinja.py  render_template.py  schema.py  schema_tables.py  task_runner.py  util.py  validate.py
scripts/: __init__.py  json_translate.py  markdown-translate.py  markdown.py  meta-validate.py  validate.py
src/: ASHRAE205.schema.yaml  ASHRAE205.schema.yml  RS0001.schema.yaml  RS0001.schema.yml  RS0002.schema.yaml  RS0003.schema.yaml  RS0004.schema.yaml  RS0005.schema.yaml  RS0006.schema.yaml  (+5 more)
(+151 files in other folders)
