# UV

[project]
name = "schema205"
version = "2.0.0"
description = ""
authors = [{name="Open205"}]
requires-python = ">= 3.10"

dependencies = [
  "jsonschema",
  "pyyaml",
  "cbor2",
  "Jinja2 >= 3.1.4",
  "lattice"
]

[tool.uv]
dev-dependencies = [
    "pytest >= 7.1.3",
    "doit",
    "pylint",
    "tomli == 2.0.1"
]

[tool.uv.sources]
lattice = {git = "https://github.com/bigladder/lattice.git"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["lattice"]