[project]
name = "schema205"
version = "2.0.0"
description = ""
authors = [{ name = "Open205" }]
requires-python = ">=3.10"
dependencies = ["jsonschema", "pyyaml", "Jinja2>=3.1.4,<4"]

[dependency-groups]
dev = ["pytest>=7.1.3,<8", "doit", "pylint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
