# UV

[project]
name = "schema205"
version = "2.0.0"
description = ""
authors = [{ name = "Open205" }]
requires-python = ">= 3.10"

dependencies = ["lattice"]

[tool.uv]
dev-dependencies = ["pytest >= 7.1.3", "doit", "pylint"]

[tool.uv.sources]
lattice = { git = "https://github.com/bigladder/lattice.git", branch = "232-pdf-fixes" } # {git = "https://github.com/bigladder/lattice.git"} { path = "../lattice", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["schema205"]

[tool.hatch.build.targets.wheel.force-include]
"./schema" = "schema205/schema"
